--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ UNITED HACKERS OF INDIA
 <marquee>
 
 <b>
-|  D4V!D_R054R!0  |  BL4CK_P4N7H3R  |  ~INJ3CT4BLE |
+|  D4V!D_R054R!0  |  BL4CK_P4N7H3R  |  ~INJ3CT4BLE | BL4CK_HYDR4 |
 </b>
 
 </marquee>
